# optional

./: .gitignore  CMakeLists.txt  GenerateProjectFiles_vs2019.bat  README.md  optional.hpp
.github/workflows/: ccpp.yml
tests/: CMakeLists.txt  optional_tests.cpp  tests.cpp
